adjusted html body to try to prevent dragging on mobile. Style edits to whatwedo

--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@ body {
   height: 100vh;
   padding: 0;
   width: 100vw;
+  max-width: 100vw;
 }
 
 h1 {
